--- a/AlumniAppCore/Views/Shared/_Layout.cshtml
+++ b/AlumniAppCore/Views/Shared/_Layout.cshtml
@@ -19,6 +19,9 @@
             *, .navbar {
                 font-family: 'Oxygen', sans-serif;
             }
+            .top-buffer {
+                margin-top: 20px;
+            }
         </style>
     </head>
     <body>
@@ -33,7 +36,7 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="@Url.Action("Index", "Home")">Home <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
                         </li>
                         <li class="nav-item dropdown">
@@ -49,7 +52,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link disabled" href="#">Disabled</a>
-                        </li>
+                        </li>*@
                     </ul>
                 </div>
             </div>
