--- a/AlumniAppCore/Views/Home/Overview.cshtml
+++ b/AlumniAppCore/Views/Home/Overview.cshtml
@@ -18,7 +18,7 @@
                 <div class="container col-sm-4 top-buffer">
                     <div class="card">
                         <!-- Card image -->
-                        <img class="card-img-top" src="~/images/students.jpg" alt="Card image cap">
+                        <img class="card-img-top" src=@opt.ImageUrl alt="Card image cap">
                         <!-- Card content -->
                         <div class="card-body">
                             <!-- Title -->
