--- a/AlumniAppCore/Views/Academic/MyProfile.cshtml
+++ b/AlumniAppCore/Views/Academic/MyProfile.cshtml
@@ -1,34 +1,38 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model Alumni.App.Db.DTO.UserDto
+@model System.Data.DataTable
 @{
 }
 <br />
 <div class="container">
     <div class="card">
         <div class="card-header">
-            My Profile
-        </div>
-        <div class="card-body">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">My Profile</h5>
         </div>
         <div class="container">
             <form>
-                <div class="form-group row">
-                    <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
-                    <div class="col-sm-10">
-                        <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="email@example.com">
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
-                    <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-                    </div>
-                </div>
+              <table class="table">
+                    @*<thead>
+                        <tr>
+                            @foreach (System.Data.DataColumn col in Model.Columns)
+                            {
+                                <th scope="col">@col.Caption</th>
+                            }
+                        </tr>
+                    </thead>*@
+                    <tbody>
+                        @foreach (System.Data.DataRow row in Model.Rows)
+                        {
+                            <tr>
+                                @foreach (var cell in row.ItemArray)
+                                {
+                                    <td>@cell.ToString()</td>
+                                }
+                            </tr>
+                        }
+                    </tbody>
+             </table>
             </form>
         </div>
     </div>
