--- a/AlumniAppCore/Views/Shared/_Layout.cshtml
+++ b/AlumniAppCore/Views/Shared/_Layout.cshtml
@@ -36,6 +36,9 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="@Url.Action("Index", "Home")">Home <span class="sr-only">(current)</span></a>
                         </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="@Url.Action("Overview", "Home")">Overview <span class="sr-only">(current)</span></a>
+                        </li>
                         @*<li class="nav-item">
                             <a class="nav-link" href="#">Link</a>
                         </li>
