Last minute GroupGrades change to show teachers name and Student's Grades view title modification

--- a/AlumniAppCore/Views/Academic/GetAllGrades.cshtml
+++ b/AlumniAppCore/Views/Academic/GetAllGrades.cshtml
@@ -8,6 +8,7 @@
     <br />
     <h1>@Model.SubjectName Grades</h1>
     <br />
+    <h2>Teacher: @Model.TeacherName</h2>
 </div>
 <div class="container">
     <table class="table">
