--- a/AlumniAppCore/Views/Shared/_Layout.cshtml
+++ b/AlumniAppCore/Views/Shared/_Layout.cshtml
@@ -36,32 +36,22 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="@Url.Action("Index", "Home")">Home <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item active">
+                        @*<li class="nav-item active">
                             <a class="nav-link" href="@Url.Action("Overview", "Home")">Mainboard <span class="sr-only">(current)</span></a>
-                        </li>
+                        </li>*@
                         <li class="nav-item active">
                             <a class="nav-link" href="@Url.Action("SettingsManager", "Settings")">Settings <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item active">
+                        @*<li class="nav-item active" style="align:right;">
+                            <a class="nav-link" href="@Url.Action("Logout", "Session")">Logout <span class="sr-only">(current)</span></a>
+                        </li>*@
+                    </ul>
+                </div>
+                <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
                             <a class="nav-link" href="@Url.Action("Logout", "Session")">Logout <span class="sr-only">(current)</span></a>
                         </li>
-                        @*<li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#">Disabled</a>
-                        </li>*@
                     </ul>
                 </div>
             </div>
