Added button on My Grades Page

--- a/AlumniAppCore/Views/Academic/MyCals.cshtml
+++ b/AlumniAppCore/Views/Academic/MyCals.cshtml
@@ -31,5 +31,9 @@
             }
         </tbody>
     </table>
+
+</div>
+<div class="container">
+    <a class="btn btn-outline-dark align-right" style="float:right;" href="@Url.Action("DownloadGrades", "Academic")"><i class="fas fa-download"></i> Download <span class="sr-only">(current)</span></a>
 </div>
 
